build: acertando porta da aplicação

--- a/src/main/resources/application-api.properties
+++ b/src/main/resources/application-api.properties
@@ -1,3 +1,4 @@
 server.servlet.context-path=/saude-ja-ficha-paciente-service
 spring.mvc.problemdetails.enabled=true
 spring.web.error.whitelabel.enabled=false
+server.port=${PORT:8082}
